# ar2tech-SGeMS-public

./: .gitignore  .qmake.cache  CMakeLists.txt  LICENSE-ar2tech.txt  README.md  config.qmake
ar2gems/: CMakeLists.txt
ar2gems/actions/: CMakeLists.txt  MMakefile  action_no_parameter.h  actions.pro  actions.vcxproj  actions.vcxproj.filters  add_property_to_grid.cpp  add_property_to_grid.h  algorithms_actions.cpp  algorithms_actions.h  categorical_definition_actions.cpp  categorical_definition_actions.h  categorical_property_actions.cpp  categorical_property_actions.h  distribution_action.cpp  distribution_action.h  library_actions_init.cpp  maskedgrid_actions.cpp  maskedgrid_actions.h  misc_actions.cpp  misc_actions.h  obj_manag_actions.cpp  obj_manag_actions.h  property_group_actions.cpp  property_group_actions.h  property_transformer_actions.cpp  property_transformer_actions.h  python_commands.h  python_group_script.cpp  python_script.cpp  tie_breaking_actions.cpp  tie_breaking_actions.h  unary_action.cpp  unary_action.h
ar2gems/appli/: CMakeLists.txt  MMakefile  action.h  appli.pro  appli.vcxproj  appli.vcxproj.filters  library_appli_init.cpp  project.cpp  root_model.cpp  utilities.cpp
ar2gems/charts/: CMakeLists.txt  MMakefile  categorical_histogram_creator.cpp  categorical_histogram_model_item.cpp  categorical_histogram_model_item.h  categorical_histogram_proxy_model.cpp  categorical_histogram_proxy_model.h  chart_base.cpp  chart_base.h  chart_base_display_controls.cpp  chart_base_display_controls.h  chart_categorical_histogram.cpp  chart_categorical_histogram.h  chart_continuous_histogram.cpp  chart_continuous_histogram.h  chart_dialog.cpp  chart_display_control.cpp  chart_display_control.h  chart_display_control.ui  chart_display_control_tab.ui  chart_distribution.cpp  chart_distribution.h  chart_matrix_widget.cpp  chart_matrix_widget.h  chart_model_item.h  chart_scatter_plot.cpp  chart_scatter_plot.h  chart_widget.cpp  chart_widget.h  charts.pro  charts.vcxproj  charts.vcxproj.filters  eda_charts.cpp  histogram_model_item.cpp  histogram_model_item.h  histogram_proxy_model.cpp  histogram_proxy_model.h  histogram_statistics.cpp  histogram_statistics.h  library_charts_init.cpp  (+11 more)
ar2gems/filters/: CMakeLists.txt  MMakefile  csv_filter.cpp  csv_filter.h  csv_filter_qt_dialogs.cpp  csv_filter_qt_dialogs.h  csv_grid_import.ui  csv_masked_import.ui  distribution_filter.cpp  filters.pro  filters.vcxproj  filters.vcxproj.filters  io_actions.cpp  io_actions.h  library_filters_init.cpp  library_filters_init.h  save_project_objects.cpp  save_project_objects.h  sgems_folder_filter.cpp  sgems_folder_filter.h  sgems_folder_grid_geometry.cpp  simulacre_filter.cpp
ar2gems/geostat/: CMakeLists.txt  GsTL_filters.h  ImageProcess.cpp  LU_sim.cpp  LU_sim.h  MMakefile  PostKriging.cpp  PostKriging.h  Postsim.cpp  Postsim.h  Postsim_categorical.cpp  Postsim_categorical.h  clustering_from_centroids.cpp  clustering_from_centroids.h  cokriging.cpp  cokriging.h  cokriging_cross_validation.cpp  cokriging_cross_validation.h  cosgsim.cpp  cosgsim.h  cosisim.cpp  cosisim.h  declus.cpp  difference_with_base.cpp  difference_with_base.h  dssim.cpp  dssim.h  geostat.pro  geostat.vcxproj  geostat.vcxproj.filters  grid_variog_computer.cpp  hmatch.cpp  hmatch.h  indicator_kriging.cpp  indicator_kriging.h  inverse_distance_estimator.cpp  inverse_distance_estimator.h  kmeans_clustering.cpp  kmeans_clustering.h  kriging.cpp  (+22 more)
ar2gems/grid/: CMakeLists.txt  MMakefile  cartesian_grid.cpp  cartesian_grid.h  cartesian_grid_geometry.cpp  cartesian_grid_geometry.h  combined_neighborhood.cpp  combined_neighborhood.h  coordinate_mapper.cpp  cross_variog_computer.cpp  distribution_utilities.cpp  distribution_utilities.h  geostat_grid.cpp  geostat_grid.h  geovalue.cpp  geovalue.h  graph_connections.cpp  graph_connections.h  grid.pro  grid.vcxproj  grid.vcxproj.filters  grid_categorical_property.cpp  grid_categorical_property.h  grid_downscaler.cpp  grid_filter.h  grid_ordered_path.cpp  grid_ordered_path.h  grid_path.cpp  grid_path.h  grid_path__h  grid_path_multigrid.cpp  grid_path_multigrid.h  grid_path_ordered.cpp  grid_path_ordered.h  grid_path_random.cpp  grid_path_random.h  grid_property.cpp  grid_property.h  grid_property_manager.cpp  grid_property_manager.h  (+52 more)
ar2gems/gui/: CMakeLists.txt  MMakefile  gui.pro  gui.vcxproj  gui.vcxproj.filters  library_gui_init.cpp  resources.qrc
ar2gems/main/: CMakeLists.txt  MMakefile  lib_initializer.cpp  main.cpp  main.pro  main.vcxproj  main.vcxproj.filters
ar2gems/main_com/: CMakeLists.txt  MMakefile  lib_initializer.cpp  lib_initializer.h  main.cpp  main_com.vcxproj
ar2gems/math/: CMakeLists.txt  MMakefile  categorical_distribution.cpp  categorical_distribution.h  continuous_distribution.h  histogram.cpp  math.pro  math.vcxproj  non_parametric_distribution.cpp  non_parametric_distribution.h
ar2gems/qtplugins/: CMakeLists.txt  MMakefile  categorical_definition_proxy_model.cpp  categorical_definition_proxy_model.h  categorical_selectors.cpp  distribution_parameter_widget.cpp  distribution_parameter_widget.h  distribution_proxy_model.cpp  filechooser.cpp  grid_filter_delegate.cpp  grid_filter_delegate.h  grid_filter_model.cpp  grid_filter_model.h  grid_filter_model_item.cpp  grid_filter_model_item.h  grid_filter_widgets.cpp  grid_proxy_model.cpp  group_selectors.cpp  gstl_widgets_plugin.h  library_qtplugins_init.h  project_proxy_model.cpp  project_proxy_model.h  property_proxy_model.cpp  property_proxy_model.h  qtplugins.pro  qtplugins.vcxproj  qtplugins.vcxproj.filters  region_proxy_model.cpp  region_proxy_model.h  region_weight_proxy_model.cpp  region_weight_proxy_model.h  rename_dialog.h  resources.qrc  selectors.cpp  selectors.h  variogram_input.cpp  variogram_input.h  weight_property_proxy_model.cpp  weight_property_proxy_model.h
ar2gems/qwt/: CMakeLists.txt  qwt.pro  qwt.vcxproj  qwt.vcxproj.filters  qwt_plot_svgitem.cpp  qwt_slider.cpp
ar2gems/unit_test/: main.cpp  unit_test.vcxproj  unit_test.vcxproj.filters  utils.cpp  utils.h
ar2gems/utils/: CMakeLists.txt  (+16 more)
(+151 files in other folders)
